@@ -37,7 +37,10 @@ if (array_key_exists('event', $data)) {
 	foreach ($data['event']['acknowledges'] as $acknowledge) {
 		$acknowledgesTable->addRow([
 			(new CCol(zbx_date2str(DATE_TIME_FORMAT_SECONDS, $acknowledge['clock'])))->addClass(ZBX_STYLE_NOWRAP),
-			(new CCol(getUserFullname($acknowledge)))->addClass(ZBX_STYLE_NOWRAP),
+			(new CCol(array_key_exists('alias', $acknowledge)
+				? getUserFullname($acknowledge)
+				: _('Inaccessible user')
+			))->addClass(ZBX_STYLE_NOWRAP),
 			zbx_nl2br($acknowledge['message']),
 			($acknowledge['action'] == ZBX_ACKNOWLEDGE_ACTION_CLOSE_PROBLEM) ? _('Close problem') : ''
 		]);
