@@ -677,11 +677,13 @@ class CEvent extends CApiService {
 				// create the base query
 				$sqlParts = API::getApiService()->createSelectQueryParts('acknowledges', 'a', [
 					'output' => $this->outputExtend($options['select_acknowledges'],
-						['acknowledgeid', 'eventid', 'clock']
+						['acknowledgeid', 'eventid', 'clock', 'userid']
 					),
 					'filter' => ['eventid' => $eventIds]
 				]);
 				$sqlParts['order'][] = 'a.clock DESC';
+
+				$acknowledges = DBFetchArrayAssoc(DBselect($this->createSelectQueryFromParts($sqlParts)), 'acknowledgeid');
 
 				// if the user data is requested via extended output or specified fields, join the users table
 				$userFields = ['alias', 'name', 'surname'];
@@ -691,17 +693,24 @@ class CEvent extends CApiService {
 						$requestUserData[] = $userField;
 					}
 				}
+
 				if ($requestUserData) {
-					foreach ($requestUserData as $userField) {
-						$sqlParts = $this->addQuerySelect('u.'.$userField, $sqlParts);
+					$users = API::User()->get([
+						'output' => $requestUserData,
+						'userids' => zbx_objectValues($acknowledges, 'userid'),
+						'preservekeys' => true
+					]);
+
+					foreach ($acknowledges as &$acknowledge) {
+						if (array_key_exists($acknowledge['userid'], $users)) {
+							$acknowledge = array_merge($acknowledge, $users[$acknowledge['userid']]);
+						}
 					}
-					$sqlParts['from'][] = 'users u';
-					$sqlParts['where'][] = 'a.userid=u.userid';
+					unset($acknowledge);
 				}
 
-				$acknowledges = DBFetchArrayAssoc(DBselect($this->createSelectQueryFromParts($sqlParts)), 'acknowledgeid');
 				$relationMap = $this->createRelationMap($acknowledges, 'eventid', 'acknowledgeid');
-				$acknowledges = $this->unsetExtraFields($acknowledges, ['eventid', 'acknowledgeid', 'clock'],
+				$acknowledges = $this->unsetExtraFields($acknowledges, ['eventid', 'acknowledgeid', 'clock', 'userid'],
 					$options['select_acknowledges']
 				);
 				$result = $relationMap->mapMany($result, $acknowledges, 'acknowledges');
